# software-supply-chain-security-hw-1

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  artifact.bundle  artifact.md  cyclonedx-sbom.json  main.py  merkle_proof.py  pyproject.toml  sbom-attestation.bundle  util.py
.github/workflows/: cd.yml  ci.yml  scorecard.yml
rekor_verification/: main.py
tests/: test_base64_decode.py  test_consistency.py  test_get_latest_checkpoint.py  test_get_log_entry.py  test_get_nested_field.py  test_get_verification_proof.py  test_handle_response.py  test_inclusion.py  test_save_json_to_file.py
