[project]
name = "rekor-verification"
version = "4.0.8"
description = "A Python script for verifying Rekor logs"
authors = [{ name = "Alexander Hom", email = "alexanderhom19@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "mypy (>=1.18.2,<2.0.0)",
    "black (>=25.11.0,<26.0.0)",
    "ruff (>=0.14.4,<0.15.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "pylint (>=4.0.2,<5.0.0)",
    "autodocstring (>=0.1.2,<0.2.0)",
    "bandit (>=1.8.6,<2.0.0)",
    "cryptography (>=46.0.3,<47.0.0)",
    "requests",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.cyclonedx]
output_format = "json"

[tool.flake8]
max-line-length = 88
ignore = ["E203", "W503"]

[dependency-groups]
dev = [
    "pytest (>=9.0.0,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "jsonschema (>=4.25.1,<5.0.0)",
    "cyclonedx-bom (>=7.2.1,<8.0.0)",
    "flake8-pyproject (>=1.2.4,<2.0.0)",
]

[project.scripts]
rekor-verification = "rekor_verification.main:main"
